packages/yew-macro/tests/html_macro/generic-component-fail.stderr
error: this opening tag has no corresponding closing tag
  --> $DIR/generic-component-fail.rs:43:13
   |
43 |     html! { <Generic<String>> };
   |             ^^^^^^^^^^^^^^^^^

error: this closing tag has no corresponding opening tag
  --> $DIR/generic-component-fail.rs:44:30
   |
44 |     html! { <Generic<String>></Generic> };
   |                              ^^^^^^^^^^

error: this closing tag has no corresponding opening tag
  --> $DIR/generic-component-fail.rs:45:30
   |
45 |     html! { <Generic<String>></Generic<Vec<String>>> };
   |                              ^^^^^^^^^^^^^^^^^^^^^^^
